# lifespan-sync

./: .gitignore  LICENSE  README.md  app.py  fitbit_client.py  pyproject.toml  requirements.txt  treadmill_client.py
