[project]
name = "lifespan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=2.1.1",
    "cherrypy>=18.10.0",
    "customtkinter>=5.2.2",
    "fitbit>=0.3.1",
    "pystray>=0.19.5",
    "requests-oauthlib>=2.0.0",
]
